--- a/virtual_environment/dolalash_website/members/static/forgot-password.css
+++ b/virtual_environment/dolalash_website/members/static/forgot-password.css
@@ -1,4 +1,4 @@
-.forms-container {
+.forgot-password-container {
   width: 100%;
   display: flex;
   overflow: auto;
@@ -6,7 +6,7 @@
   align-items: center;
   flex-direction: column;
 }
-.forms-navbar {
+.forgot-password-navbar {
   top: 0;
   width: 100%;
   display: flex;
@@ -16,14 +16,14 @@
   flex-direction: column;
   background-color: var(--dl-color-gray-white);
 }
-.forms-header {
+.forgot-password-header {
   padding-top: var(--dl-space-space-oneandhalfunits);
   flex-direction: row;
   padding-bottom: var(--dl-space-space-oneandhalfunits);
   justify-content: space-between;
   background-color: var(--dl-color-gray-white);
 }
-.forms-navbar1 {
+.forgot-password-navbar1 {
   width: 100%;
   display: flex;
   position: relative;
@@ -31,13 +31,13 @@
   justify-content: space-between;
   background-color: var(--dl-color-gray-white);
 }
-.forms-container01 {
+.forgot-password-container1 {
   border: 2px dashed rgba(120, 120, 120, 0.4);
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-.forms-middle {
+.forgot-password-middle {
   display: flex;
   position: relative;
   box-sizing: border-box;
@@ -46,40 +46,40 @@
   border-color: transparent;
   justify-content: center;
 }
-.forms-left {
+.forgot-password-left {
   display: flex;
   grid-gap: 45px;
   position: relative;
   align-items: flex-start;
 }
-.forms-text {
+.forgot-password-text {
   text-decoration: none;
 }
-.forms-text01 {
+.forgot-password-text01 {
   text-decoration: none;
 }
-.forms-logo-center {
+.forgot-password-logo-center {
   text-decoration: none;
 }
-.forms-right {
+.forgot-password-right {
   display: flex;
   grid-gap: 45px;
   position: relative;
   align-items: flex-start;
 }
-.forms-text02 {
+.forgot-password-text02 {
   text-decoration: none;
 }
-.forms-text03 {
+.forgot-password-text03 {
   text-decoration: none;
 }
-.forms-icons {
+.forgot-password-icons {
   display: flex;
 }
-.forms-navlink {
+.forgot-password-navlink {
   display: contents;
 }
-.forms-image {
+.forgot-password-image {
   width: 24px;
   height: 24px;
   position: relative;
@@ -88,15 +88,15 @@
   border-color: transparent;
   text-decoration: none;
 }
-.forms-burger-menu {
+.forgot-password-burger-menu {
   display: none;
 }
-.forms-icon {
+.forgot-password-icon {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
   display: none;
 }
-.forms-mobile-menu {
+.forgot-password-mobile-menu {
   top: 0px;
   left: 0px;
   width: 100%;
@@ -110,19 +110,19 @@
   justify-content: space-between;
   background-color: #fff;
 }
-.forms-nav {
+.forgot-password-nav {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
 }
-.forms-container02 {
+.forgot-password-container2 {
   width: 100%;
   display: flex;
   align-items: center;
   margin-bottom: var(--dl-space-space-threeunits);
   justify-content: space-between;
 }
-.forms-logo-center1 {
+.forgot-password-logo-center1 {
   color: var(--dl-color-gray-black);
   height: auto;
   font-size: 24px;
@@ -134,16 +134,16 @@
   letter-spacing: 0.4em;
   text-decoration: none;
 }
-.forms-close-mobile-menu {
+.forgot-password-close-mobile-menu {
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.forms-icon02 {
+.forgot-password-icon02 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
 }
-.forms-middle1 {
+.forgot-password-middle1 {
   gap: var(--dl-space-space-unit);
   display: flex;
   position: relative;
@@ -155,7 +155,7 @@
   flex-direction: column;
   justify-content: center;
 }
-.forms-home {
+.forgot-password-home {
   color: rgba(0, 0, 0, 1);
   height: auto;
   font-size: 13px;
@@ -164,7 +164,7 @@
   font-weight: 500;
   text-decoration: none;
 }
-.forms-services {
+.forgot-password-services {
   color: rgba(0, 0, 0, 1);
   height: auto;
   font-size: 13px;
@@ -173,7 +173,7 @@
   font-weight: 500;
   text-decoration: none;
 }
-.forms-about-us {
+.forgot-password-about-us {
   color: rgba(0, 0, 0, 1);
   height: auto;
   font-size: 13px;
@@ -182,7 +182,7 @@
   font-weight: 500;
   text-decoration: none;
 }
-.forms-contact {
+.forgot-password-contact {
   color: rgba(0, 0, 0, 1);
   height: auto;
   font-size: 13px;
@@ -191,7 +191,7 @@
   font-weight: 500;
   text-decoration: none;
 }
-.forms-profile {
+.forgot-password-profile {
   color: rgba(0, 0, 0, 1);
   height: auto;
   font-size: 13px;
@@ -200,57 +200,51 @@
   font-weight: 500;
   text-decoration: none;
 }
-.forms-icon04 {
+.forgot-password-icon04 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
   margin-right: var(--dl-space-space-twounits);
 }
-.forms-icon06 {
+.forgot-password-icon06 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
   margin-right: var(--dl-space-space-twounits);
 }
-.forms-icon08 {
+.forgot-password-icon08 {
   width: var(--dl-size-size-xsmall);
   height: var(--dl-size-size-xsmall);
   text-decoration: none;
 }
-.forms-pricing {
-  width: 100%;
+.forgot-password-pricing {
+  width: 927px;
+  height: 998px;
   display: flex;
+  background-size: cover;
   justify-content: center;
   background-color: var(--dl-color-gray-white);
+  background-image: url('https://images.unsplash.com/photo-1630655491563-fe6ea47d06f5?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDV8fGV5ZWxhc2h8ZW58MHx8fHwxNjc0MzA1Mzcy&ixlib=rb-4.0.3&w=1500');
 }
-.forms-container03 {
+.forgot-password-container3 {
   width: 100%;
-  height: 1001px;
+  height: 1021px;
   display: flex;
   padding: var(--dl-space-space-threeunits);
   max-width: var(--dl-size-size-maxwidth);
-  align-items: flex-start;
-  background-size: cover;
-  justify-content: center;
-  background-image: url('https://images.unsplash.com/photo-1630655491563-fe6ea47d06f5?ixid=Mnw5MTMyMXwwfDF8c2VhcmNofDV8fGV5ZWxhc2h8ZW58MHx8fHwxNjc0MzA1Mzcy&ixlib=rb-4.0.3&w=1400');
-}
-.forms-container04 {
-  flex: 2;
-  width: 50%;
-  height: 828px;
-  display: flex;
   align-items: center;
-  flex-direction: row;
+  border-color: var(--dl-color-gray-black);
+  border-width: 0px;
   justify-content: center;
 }
-.forms-container05 {
+.forgot-password-container4 {
   flex: 1;
-  height: 771px;
+  width: 648px;
+  height: 341px;
   display: flex;
   max-width: 450px;
   box-shadow: 5px 5px 10px 0px #d4d4d4;
   transition: 0.3s;
   align-items: center;
   padding-top: var(--dl-space-space-twounits);
-  margin-right: var(--dl-space-space-twounits);
   padding-left: var(--dl-space-space-twounits);
   padding-right: var(--dl-space-space-twounits);
   flex-direction: column;
@@ -258,268 +252,253 @@
   justify-content: center;
   background-color: var(--dl-color-gray-white);
 }
-.forms-container05:hover {
+.forgot-password-container4:hover {
   transform: scale(1.02);
 }
-.forms-text04 {
+.forgot-password-icon10 {
+  width: 24px;
+  height: 57px;
+}
+.forgot-password-text04 {
   font-size: 1.5rem;
   font-weight: 600;
 }
-.forms-form {
-  width: 394px;
-  height: 672px;
+.forgot-password-form {
+  width: 349px;
+  height: 298px;
   display: inline-block;
+  text-align: center;
 }
-.forms-text07 {
+.forgot-password-text07 {
   align-self: flex-start;
+  margin-top: var(--dl-space-space-oneandhalfunits);
   padding-top: 0px;
   padding-left: 0px;
   padding-bottom: 0px;
 }
-.forms-container06 {
+.forgot-password-container5 {
   flex: 0 0 auto;
   width: auto;
   height: 52px;
   display: flex;
-  margin-top: var(--dl-space-space-unit);
+  margin-top: var(--dl-space-space-halfunit);
   align-items: flex-start;
-  margin-bottom: var(--dl-space-space-unit);
+  margin-bottom: var(--dl-space-space-halfunit);
   justify-content: center;
 }
-.forms-icon10 {
+.forgot-password-icon12 {
   width: 24px;
   height: 100%;
   margin-right: var(--dl-space-space-halfunit);
 }
-.forms-textinput {
+.forgot-password-textinput {
   color: var(--dl-color-gray-black);
   width: 374px;
   height: 52px;
   background-color: var(--dl-color-gray-900);
 }
-.forms-text08 {
-  align-self: flex-start;
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-bottom: 0px;
-}
-.forms-container07 {
-  flex: 0 0 auto;
-  width: auto;
-  height: 52px;
-  display: flex;
-  margin-top: var(--dl-space-space-unit);
-  align-items: flex-start;
-  margin-bottom: var(--dl-space-space-unit);
-  justify-content: center;
-}
-.forms-icon12 {
-  width: 24px;
-  height: 100%;
-  margin-right: var(--dl-space-space-halfunit);
-}
-.forms-textinput1 {
-  color: var(--dl-color-gray-black);
-  width: 374px;
-  height: 52px;
-  background-color: var(--dl-color-gray-900);
-}
-.forms-text11 {
-  align-self: flex-start;
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-bottom: 0px;
-}
-.forms-container08 {
-  flex: 0 0 auto;
-  width: auto;
-  height: 52px;
-  display: flex;
-  margin-top: var(--dl-space-space-unit);
-  align-items: flex-start;
-  margin-bottom: var(--dl-space-space-unit);
-  justify-content: center;
-}
-.forms-container09 {
-  flex: 0 0 auto;
-  width: auto;
-  height: 52px;
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-}
-.forms-icon14 {
-  width: 24px;
-  height: 100%;
-  margin-right: var(--dl-space-space-halfunit);
-}
-.forms-textinput2 {
-  color: var(--dl-color-gray-black);
-  width: 361px;
-  height: 52px;
-  background-color: var(--dl-color-gray-900);
-}
-.forms-text14 {
-  align-self: flex-start;
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-bottom: 0px;
-}
-.forms-select {
-  width: 100%;
-  height: 54px;
-  margin-top: var(--dl-space-space-unit);
-  margin-bottom: var(--dl-space-space-unit);
-}
-.forms-text17 {
-  align-self: flex-start;
-  margin-top: 0px;
-  padding-top: 0px;
-  padding-left: 0px;
-  padding-bottom: 0px;
-}
-.forms-textarea {
-  width: 100%;
-  height: 101px;
-  margin-top: var(--dl-space-space-unit);
-  margin-bottom: var(--dl-space-space-unit);
-}
-.forms-container10 {
+.forgot-password-container6 {
   flex: 0 0 auto;
   width: 100%;
-  height: 35px;
+  height: 46px;
   display: flex;
-  margin-top: var(--dl-space-space-unit);
+  margin-top: var(--dl-space-space-halfunit);
   align-items: center;
-  margin-bottom: var(--dl-space-space-unit);
+  align-content: center;
+  margin-bottom: var(--dl-space-space-halfunit);
   justify-content: center;
 }
-.forms-navlink1 {
+.forgot-password-navlink1 {
   color: var(--dl-color-gray-white);
-  width: 278px;
-  margin-top: 0px;
+  width: 218px;
+  margin-top: var(--dl-space-space-halfunit);
+  align-items: flex-start;
   padding-top: 10px;
   border-width: 0px;
   padding-left: var(--dl-space-space-twounits);
+  margin-bottom: var(--dl-space-space-halfunit);
   padding-right: var(--dl-space-space-twounits);
   padding-bottom: 10px;
   justify-content: center;
   text-decoration: none;
   background-color: var(--dl-color-gray-black);
 }
+.forgot-password-navlink2 {
+  align-self: flex-start;
+  margin-top: var(--dl-space-space-unit);
+  padding-top: 0px;
+  padding-left: 0px;
+  margin-bottom: var(--dl-space-space-unit);
+  padding-bottom: 0px;
+  text-decoration: underline;
+}
+.forgot-password-container7 {
+  flex: 0;
+  width: auto;
+  border: 2px dashed rgba(120, 120, 120, 0.4);
+  height: auto;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: center;
+}
 @media(max-width: 991px) {
-  .forms-container01 {
+  .forgot-password-container1 {
     display: none;
   }
-  .forms-left {
+  .forgot-password-left {
     display: none;
   }
-  .forms-right {
+  .forgot-password-right {
     display: none;
   }
-  .forms-icons {
+  .forgot-password-icons {
     display: none;
   }
-  .forms-burger-menu {
+  .forgot-password-burger-menu {
     display: flex;
   }
-  .forms-icon {
+  .forgot-password-icon {
     width: 24px;
     height: 24px;
     display: flex;
   }
-  .forms-logo-center1 {
+  .forgot-password-logo-center1 {
     margin-left: 0px;
   }
-  .forms-container03 {
-    height: 1150px;
+  .forgot-password-pricing {
+    height: 1019px;
+  }
+  .forgot-password-container3 {
+    height: 100%;
     align-items: center;
     flex-direction: column;
-    padding-bottom: 0px;
   }
-  .forms-container04 {
+  .forgot-password-container4 {
+    flex: 0;
+    width: auto;
+    height: auto;
+    padding: var(--dl-space-space-twounits);
+    max-width: auto;
+    max-height: auto;
+    margin-right: 0px;
+  }
+  .forgot-password-form {
+    height: 203px;
+  }
+  .forgot-password-container7 {
     width: 100%;
   }
 }
 @media(max-width: 767px) {
-  .forms-header {
+  .forgot-password-header {
     background-color: #ffffff;
   }
-  .forms-logo-center {
+  .forgot-password-logo-center {
     text-decoration: none;
   }
-  .forms-burger-menu {
+  .forgot-password-burger-menu {
     display: flex;
     align-items: center;
     justify-content: center;
   }
-  .forms-logo-center1 {
+  .forgot-password-logo-center1 {
     color: var(--dl-color-gray-black);
   }
-  .forms-home {
+  .forgot-password-home {
     color: rgb(0, 0, 0);
     font-size: 13px;
     font-family: Jost;
     font-weight: 500;
     text-decoration: none;
   }
-  .forms-services {
+  .forgot-password-services {
     color: rgb(0, 0, 0);
     font-size: 13px;
     font-family: Jost;
     font-weight: 500;
     text-decoration: none;
   }
-  .forms-about-us {
+  .forgot-password-about-us {
     color: rgb(0, 0, 0);
     font-size: 13px;
     font-family: Jost;
     font-weight: 500;
     text-decoration: none;
   }
-  .forms-contact {
+  .forgot-password-contact {
     color: rgb(0, 0, 0);
     font-size: 13px;
     font-family: Jost;
     font-weight: 500;
     text-decoration: none;
   }
-  .forms-profile {
+  .forgot-password-profile {
     color: rgb(0, 0, 0);
     font-size: 13px;
     font-family: Jost;
     font-weight: 500;
     text-decoration: none;
   }
-  .forms-container03 {
+  .forgot-password-pricing {
+    width: 100%;
+    height: auto;
+  }
+  .forgot-password-container3 {
+    height: 973px;
+    margin-top: var(--dl-space-space-oneandhalfunits);
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
   }
-  .forms-container04 {
-    flex-direction: column;
-  }
-  .forms-container05 {
+  .forgot-password-container4 {
     width: 100%;
-    padding-top: var(--dl-space-space-twounits);
-    margin-right: 0px;
-    margin-bottom: var(--dl-space-space-twounits);
+    height: 340px;
+    margin: 0px;
+    padding: var(--dl-space-space-twounits);
+  }
+  .forgot-password-form {
+    height: 207px;
+  }
+  .forgot-password-container7 {
+    height: 1341px;
+    flex-direction: column;
   }
 }
 @media(max-width: 479px) {
-  .forms-header {
+  .forgot-password-header {
     padding: var(--dl-space-space-unit);
     background-color: #ffffff;
   }
-  .forms-container01 {
+  .forgot-password-container1 {
     background-color: #ffffff;
   }
-  .forms-mobile-menu {
+  .forgot-password-mobile-menu {
     padding: 16px;
   }
-  .forms-container03 {
+  .forgot-password-pricing {
+    width: auto;
+    height: 999px;
+  }
+  .forgot-password-container3 {
+    width: 100%;
+    height: auto;
+    margin-top: var(--dl-space-space-unit);
     padding-top: var(--dl-space-space-twounits);
     padding-left: var(--dl-space-space-unit);
+    margin-bottom: var(--dl-space-space-oneandhalfunits);
     padding-right: var(--dl-space-space-unit);
     padding-bottom: var(--dl-space-space-twounits);
+  }
+  .forgot-password-container4 {
+    width: auto;
+    height: 341px;
+    padding: var(--dl-space-space-twounits);
+    margin-top: var(--dl-space-space-twounits);
+    margin-left: 0px;
+    margin-right: 0px;
+    margin-bottom: 0px;
+  }
+  .forgot-password-container7 {
+    height: 1700px;
   }
 }
